<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Planning Poker</string>
    <string name="planning_poker_title">PLANNING POKER</string>
    <string name="step_one">Pick a story or feature</string>
    <string name="step_two">Everyone picks an estimate card</string>
    <string name="step_three">Reveal cards - low/high explain</string>
    <string name="step_four">Repeat until consensus</string>
    <string name="deal_me_in_button">Deal me in!</string>
    <string name="settings">Settings</string>
    <string name="sequence_settings">Card Sequence</string>
    <string name="sequence_settings_summary">Change the sequence of the cards in the deck</string>
    <string name="tap_to_reveal">Tap to Reveal</string>

</resources>